--- a/public/assets/css/style-modal-analise.css
+++ b/public/assets/css/style-modal-analise.css
@@ -139,7 +139,7 @@
     margin-right: 20px;
     align-items: center;
 }
-.modal-analise-post .cont-modal-post-analise .cont-conteudo-analise .cont-img-post img, .box-modal .modal-comentarios-post .cont-modal-comentarios .cont-info-comentarios .cont-img img{
+.modal-analise-post .cont-modal-post-analise .cont-conteudo-analise .cont-img-post img, .box-modal .modal-comentarios-post .cont-modal-comentarios .cont-info-comentarios .cont-img .img-post-comentario{
     width: 100%;
     height: 100%;
     object-fit: fill;
