--- a/public/assets/css/style-perfil.css
+++ b/public/assets/css/style-perfil.css
@@ -29,7 +29,8 @@ a {
 .cont-banner img{
   width: 100%;
   height: 300px;
-  object-fit: fill;
+
+  object-fit: cover;
 }
 
 .header__wrapper .cols__container .left__col {
@@ -168,6 +169,10 @@ a {
   display: block;
   height: 100%;
   object-fit: cover;
+  margin-bottom: 3px;
+  width: 400px; /* Aumente o tamanho para o desejado */
+  height: 200px;
+ 
 }
 
 /* Responsiveness */
@@ -366,4 +371,12 @@ a {
   width: 100%;
   justify-content: center;
   align-items: center;
+}
+
+.img-quadrada {
+  width: 300px; /* Aumente o tamanho para o desejado */
+  height: 300px;
+  object-fit: cover;
+  display: block;
+  max-width: 100%;
 }
